--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,33 @@ body {
 ol, ul {
 	list-style: none;
 }
-
+.css-1ipe07d {
+    display: inline-flex;
+    appearance: none;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    user-select: none;
+    position: relative;
+    white-space: nowrap;
+    vertical-align: middle;
+    outline: transparent solid 2px;
+    outline-offset: 2px;
+    line-height: 1.2;
+    border-radius: var(--chakra-radii-md);
+    font-weight: var(--chakra-fontWeights-semibold);
+    transition-property: var(--chakra-transition-property-common);
+    transition-duration: var(--chakra-transition-duration-normal);
+    height: var(--chakra-sizes-8);
+    min-width: var(--chakra-sizes-8);
+    font-size: var(--chakra-fontSizes-sm);
+    padding-inline-start: var(--chakra-space-3);
+    padding-inline-end: var(--chakra-space-3);
+    color: var(--chakra-colors-white);
+    margin-left: var(--chakra-space-1);
+    background: rgb(3, 57, 233);
+}
 blockquote, q {
 	quotes: none;
 }
@@ -83,7 +109,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fff;
+		background: #fafafa;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
